--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "YOUR DISCORD API TOKEN HERE",
-	"prefix": "!",
+	"token": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8",
+	"prefix": "*",
 	"ytApiKey": "YOUR YOUTUBE API TOKEN HERE"
 }
