--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8",
+	"token": "token",
 	"prefix": "*",
-	"ytApiKey": "YOUR YOUTUBE API TOKEN HERE"
+	"ytApiKey": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8"
 }
