--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "bytetech",
   "version": "2.1.0",
-  "description": "Test bot",
+  "description": "-- AWESOMENESS --",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "author": "Predrag Stošić",
-  "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "discord.js": "^11.3.2",
@@ -21,5 +19,8 @@
     "simple-youtube-api": "^5.0.2",
     "youtube-info": "^1.2.0",
     "ytdl-core": "^0.20.4"
+  },
+  "engines": {
+    "node": "8.4.0"
   }
 }
